# ChangeLog for www-client/opera-next
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/www-client/opera-next/ChangeLog,v 1.95 2012/06/06 18:03:50 jer Exp $

  06 Jun 2012; Jeroen Roovers <jer@gentoo.org> opera-next-12.00.1445.ebuild:
  Introduce USE=multilib to not install operapluginwrapper-ia32-linux on
  no-multilib profiles.

*opera-next-12.00.1445 (06 Jun 2012)

  06 Jun 2012; Jeroen Roovers <jer@gentoo.org> +opera-next-12.00.1445.ebuild:
  http://my.opera.com/desktopteam/blog/2012/06/06/html5-drag-and-drop-fixes

*opera-next-12.00.1441 (05 Jun 2012)

  05 Jun 2012; Jeroen Roovers <jer@gentoo.org> -opera-next-12.00.1431.ebuild,
  -opera-next-12.00.1433.ebuild, +opera-next-12.00.1441.ebuild:
  http://my.opera.com/desktopteam/blog/2012/06/05/a-few-more-updates-to-12-00

*opera-next-12.00.1440 (02 Jun 2012)

  02 Jun 2012; Jeroen Roovers <jer@gentoo.org> +opera-next-12.00.1440.ebuild:
  http://my.opera.com/desktopteam/blog/2012/06/01/oopp-windows

*opera-next-12.00.1439 (31 May 2012)

  31 May 2012; Jeroen Roovers <jer@gentoo.org> -opera-next-12.00.1429.ebuild,
  +opera-next-12.00.1439.ebuild:
  http://my.opera.com/desktopteam/blog/2012/05/31/password-and-font-fixes

*opera-next-12.00.1438 (30 May 2012)

  30 May 2012; Jeroen Roovers <jer@gentoo.org> +opera-next-12.00.1438.ebuild:
  http://my.opera.com/desktopteam/blog/2012/05/30/oopp-improvements

*opera-next-12.00.1433 (28 May 2012)

  28 May 2012; Jeroen Roovers <jer@gentoo.org> -opera-next-12.00.1422.ebuild,
  -opera-next-12.00.1424.ebuild, +opera-next-12.00.1433.ebuild:
  http://my.opera.com/desktopteam/blog/2012/05/28/yas

*opera-next-12.00.1431 (26 May 2012)

  26 May 2012; Jeroen Roovers <jer@gentoo.org> +opera-next-12.00.1431.ebuild:
  http://my.opera.com/desktopteam/blog/2012/05/25/friday-snapshot

*opera-next-12.00.1429 (24 May 2012)

  24 May 2012; Jeroen Roovers <jer@gentoo.org> -opera-next-12.00.1413.ebuild,