@@ -16,17 +16,21 @@ DIST opera-next-12.00-1441.x86_64.linux.tar.xz 13715908 RMD160 a4e64beb99272a851
 DIST opera-next-12.00-1445.i386.freebsd.tar.xz 12629092 RMD160 af68e6e1df01457af23ab8c5f87c810b5af0c6c2 SHA1 f5696686c4434dbe8420a4a8d4ded0fe0fbcfa7b SHA256 2e72373d276c763dd59e896e93a4163bbfcb295f3374d3822338336c5dc36601
 DIST opera-next-12.00-1445.i386.linux.tar.xz 12656308 RMD160 edcc2543fed187e80f73fe814286932051f13166 SHA1 39a69f2b94495c3a63b5df586b4bda00d165edd7 SHA256 3b94724086e9fb3c5e168978a6a5396c0c2f306feb02ae0a606e05b5a1b213c0
 DIST opera-next-12.00-1445.x86_64.linux.tar.xz 13712924 RMD160 d1f4b690b5fcce150df5499daaa4633e6362e4b2 SHA1 7d80391031484e5c43df6665e96c32dd8e772e53 SHA256 11e1eca6b97cf59a79a8bbce152e3e164b656e73cd8ccad40f700b30536c46e6
+DIST opera-next-12.00-1448.i386.freebsd.tar.xz 12596020 RMD160 1ee5cebdf0e3fdc4af850b508012259754cbd115 SHA1 ab1283eb69af2456820ca4022464abe99d988433 SHA256 04478ae2a9b80172fe35689b8c39a361002f6586b895e8502bb608068f58d864
+DIST opera-next-12.00-1448.i386.linux.tar.xz 12603472 RMD160 83f8c830a64018daf19c6aeb7d3b0c72b5176598 SHA1 4ff3d14f67deadb9e95ab43a6dabc13bf9081c4b SHA256 e01065842f77730677b091b3184d8fbb3930ca7286b13ed982f8315231832ef4
+DIST opera-next-12.00-1448.x86_64.linux.tar.xz 13682184 RMD160 ce8241db98ca3e463922e918221a89f30a50aa3a SHA1 3b7890f12f18060836240c485f2a5f8623f1b3ee SHA256 799f4b76d71b1c08f74a918fbfe8a07dd6f7710822ada92fb9bf2734a8660367
 EBUILD opera-next-12.00.1438.ebuild 5505 RMD160 ee8817d3cf75868a19cbd9b7e9c559464ab105e3 SHA1 7f1412a84d280c225bf503771df7b8ec2b8506fc SHA256 b41c2f18018cde12c45fc0f4313f9147316b78648d5cd99b4089fa5002394be7
 EBUILD opera-next-12.00.1439.ebuild 5505 RMD160 c09a33ff72075d2148f21ceff89d26de0c9da481 SHA1 bedc8813b82767c4c785ad8eb6524d13043b013b SHA256 08ece6c9d7219bcb0bd38e75b4ed14a0d269e9d38c091f2835634c9c8204176e
 EBUILD opera-next-12.00.1440.ebuild 5508 RMD160 c340c18430359653a051b07b8390e82664a12689 SHA1 148f6ddcb9ab6e24fd615caa434b34e6e49950a7 SHA256 c6d7aac6d212a8fb3a099f306ce901b949b9729bbc87ceb83541a4d5dfff4c3c
 EBUILD opera-next-12.00.1441.ebuild 5506 RMD160 0c009a2d62f129adf48b1f6f61b9d3c3197f4318 SHA1 97204681c15bf5744bdba49ca50d87e99b7e65b2 SHA256 1b7fda037a4a2e43f7d6c6ed6e086fa171467ac72c090edea8456ffd21d1a01b
 EBUILD opera-next-12.00.1445.ebuild 5629 RMD160 233fcafc3be6f23d9150d63307a5e9c01ce680d3 SHA1 2d131d801bf5e379ec8a907b66d48016635ae444 SHA256 d6341d4abec78e88606a431ba7f9509f4e2affa5ffffa93a6da0ce1aaa44547b
-MISC ChangeLog 19790 RMD160 2222d20ff1ab210f81fc578f6a852350f550afcc SHA1 3bd77030d9320b574adc0eb4224b6fd074a0bce9 SHA256 92b3f7182d272ff584c7cf45325ab7442fb02a29831b87774383c0bbc2c08cfb
+EBUILD opera-next-12.00.1448.ebuild 5625 RMD160 affc2ce562357a3c0ed5c61b8fd288f126ca3423 SHA1 3b9c5c2b92bc59529a752ef18cd5c1fb5f0f752e SHA256 64064976b84022a0c793df6d722fc41fe6ebc32d35fcbe9b4183303aa69e64c4
+MISC ChangeLog 19978 RMD160 9bba9bfdb8d212f549b0be6e363d3536cf8ad0f7 SHA1 720298fd29c24ebaea3f47cd678de7ec01449167 SHA256 fab631aff3cf6be80a070655abbe34ce6425a6fd43baf9c8d6de80583dbacbba
 MISC metadata.xml 1583 RMD160 dd5554bed2dcc35aecefd6128071453321f0fe72 SHA1 23df98cede689a9f06fdf2f82288ac7f59b23c3a SHA256 bdd625fc4e2581a5b7449ad13b227a1991da039d9c1d07b459eace4771429359
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEARECAAYFAk/Pm4wACgkQVWmRsqeSphNskgCdHomMeEGuId21W/qfNBd8BDAF
-FGUAn3FaE0obc/vvLTFO0ZCTZV9zufyO
-=gDQ0
+iEYEARECAAYFAk/Rd1UACgkQVWmRsqeSphNOOwCffLMo2rnwJMehMvcEHUPKVQYS
+HFMAn2mu4OECUVtqUCrQNcP657Lalo8f
+=9vHw
 -----END PGP SIGNATURE-----
