@@ -1,6 +1,11 @@
 # ChangeLog for www-client/opera-next
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/opera-next/ChangeLog,v 1.95 2012/06/06 18:03:50 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/opera-next/ChangeLog,v 1.96 2012/06/08 03:53:52 jer Exp $
+
+*opera-next-12.00.1448 (08 Jun 2012)
+
+  08 Jun 2012; Jeroen Roovers <jer@gentoo.org> +opera-next-12.00.1448.ebuild:
+  http://my.opera.com/desktopteam/blog/2012/06/07/plugged-in-to-twelve
 
   06 Jun 2012; Jeroen Roovers <jer@gentoo.org> opera-next-12.00.1445.ebuild:
   Introduce USE=multilib to not install operapluginwrapper-ia32-linux on
